<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/act_login"
    android:background="@color/azul_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActLogin">

    <TextView
        android:id="@+id/txt_inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/bem_vindo"
        android:textColor="@color/cor_texto_escuro"
        android:textSize="14sp"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp"
        android:layout_below="@id/txt_inicial"
        app:srcCompat="@drawable/logo_sis"
        />

    <LinearLayout
        android:id="@+id/ly_corpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/seu_email_ou_celular">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxWidth="400dp"
                android:maxLength="64"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            android:hint="@string/sua_senha"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxWidth="400dp"
                android:maxLength="16"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_link_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/esqueceu_sua_senha"
            android:textColor="@color/cor_texto" />

        <LinearLayout
            android:id="@+id/ly_botoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="4dp"
                app:cardBackgroundColor="@color/botao_entrar"
                app:cardCornerRadius="4dip"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_entrar"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/botao_entrar"
                    android:text="@string/entrar"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/cor_texto_escuro"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

 </RelativeLayout>

